tdf#142978 Add a11y check sidebar
Change-Id: I6d9d6dca0118567f68db11b7c0cce60643211ab2
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149000
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>

--- a/svx/uiconfig/ui/accessibilitycheckentry.ui
+++ b/svx/uiconfig/ui/accessibilitycheckentry.ui
@@ -29,7 +29,7 @@
     </child>
     <child>
       <object class="GtkButton" id="accessibilityCheckEntryGotoButton">
-        <property name="label" translatable="yes" context="accessibilitycheckentry|accessibilityCheckEntryGotoButton">Go to Issue</property>
+        <property name="label" translatable="yes" context="accessibilitycheckentry|accessibilityCheckEntryGotoButton">Go to</property>
         <property name="visible">True</property>
         <property name="can-focus">True</property>
         <property name="receives-default">True</property>
