tdf#153890  "similar texts" -> "other occurrences" + tooltip
Change-Id: I95e7fa7334093e5358d1191e42328367e7e8df74
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148861
Tested-by: Jenkins
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>

--- a/sw/uiconfig/swriter/ui/indexentry.ui
+++ b/sw/uiconfig/swriter/ui/indexentry.ui
@@ -480,8 +480,9 @@
             </child>
             <child>
               <object class="GtkCheckButton" id="applytoallcb">
-                <property name="label" translatable="yes" context="indexentry|applytoallcb">Apply to all similar texts</property>
+                <property name="label" translatable="yes" context="indexentry|applytoallcb">Apply to all other occurrences</property>
                 <property name="can-focus">True</property>
+                 <property name="tooltip-text" translatable="yes" context="indexentry|applytoallcb|tooltip_text">Add an index entry to any other occurences of the selected text specified in “Entry”.</property>
                 <property name="receives-default">False</property>
                 <property name="no-show-all">True</property>
                 <property name="halign">start</property>
